--- a/projects/martinApp/src/styles.scss
+++ b/projects/martinApp/src/styles.scss
@@ -84,7 +84,7 @@ $caption-color: #bcbccb;
       rgba(70, 33, 173, 0.52),
       rgba(70, 33, 173, 0.73)
     ),
-    url("assets/img/zachary-nelson-192289-unsplash@2x.png");
+    url("assets/img/fondo.webp");
   background-position: center;
   background-size: cover;
   color: white;
@@ -283,16 +283,6 @@ $breakpoint-tablet: 768px;
 
   #contenido {
     min-height: 100vh;
-    background-image: linear-gradient(
-        to bottom,
-        rgba(70, 33, 173, 0.52),
-        rgba(70, 33, 173, 0.73)
-      ),
-      url("assets/img/zachary-nelson-192289-unsplash@2x.png");
-    background-position: center;
-    background-size: cover;
-    color: white;
-    // text-align: center;
 
     div,
     section {
